--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="poster">
-      <img src="./assets/images/yes.jpg" alt="darnerys holding a egg">
+      <img src="./assets/images/yes.jpg" alt="a man jumping in the air">
       <div id="text">
         <h2>Me when</h2>
         <p>I discovered web development</p>
